Updated Basic Look & Feel of Posts

--- a/content/blog/2022-01-19-books-i-read-in-2021.mdx
+++ b/content/blog/2022-01-19-books-i-read-in-2021.mdx
@@ -10,7 +10,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="Franchise: The Golden Arches in Black America"
     author="Marcia Chatelain"
-    coverImageSrc="/images/books/franchise_golden_arches.jpg"
+    coverImageSrc="https://i.postimg.cc/3JTQPJtY/franchise-golden-arches.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/franchise-the-golden-arches-in-black-america-9781684577019/9781631498701"
@@ -31,7 +31,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="The MVP Machine: How Baseball's New Nonconformists Are Using Data to Build Better Players"
     author="Ben Lindbergh &amp; Travis Sawchik"
-    coverImageSrc="/images/books/mvpmachine.jpg"
+    coverImageSrc="https://i.postimg.cc/bvGGwDJS/mvpmachine.jpg"
     width={193}
     height={300}
     link="https://bookshop.org/books/the-mvp-machine-how-baseball-s-new-nonconformists-are-using-data-to-build-better-players/9781541698925"
@@ -60,7 +60,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="Money: The True Story of a Made-Up Thing"
     author="Jacob Goldstein"
-    coverImageSrc="/images/books/money-goldstein.jpg"
+    coverImageSrc="https://i.postimg.cc/1X0V1kzW/money-goldstein.jpg"
     width={200}
     height={300}
     link="https://bookshop.org/books/money-the-true-story-of-a-made-up-thing/9780316417198"
@@ -72,7 +72,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="Field of Schemes: How the Great Stadium Swindle Turns Public Money Into Private Profit"
     author="Neil Demause &amp; Joanna Cagan"
-    coverImageSrc="/images/books/fieldofschemes.jpg"
+    coverImageSrc="https://i.postimg.cc/dVFQmjbR/fieldofschemes.jpg"
     width={202}
     height={300}
     link="https://bookshop.org/books/field-of-schemes-how-the-great-stadium-swindle-turns-public-money-into-private-profit-revised/9780803260160"
@@ -90,7 +90,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="The Premonition: A Pandemic Story"
     author="Michael Lewis"
-    coverImageSrc="/images/books/premonition.jpg"
+    coverImageSrc="https://i.postimg.cc/h40Ggbr3/premonition.jpg"
     width={197}
     height={300}
     link="https://bookshop.org/books/the-premonition-a-pandemic-story-9781713631897/9780393881554"
@@ -107,7 +107,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="Think Again: The Power of Knowing What You Don't Know"
     author="Adam Grant"
-    coverImageSrc="/images/books/thinkagain.jpg"
+    coverImageSrc="https://i.postimg.cc/3JDMZ2Rx/thinkagain.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/think-again-the-power-of-knowing-what-you-don-t-know-9781984878106/9781984878106"
@@ -128,7 +128,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="The Cult of We: WeWork, Adam Neumann, and the Great Startup Delusion"
     author="Eliot Brown &amp; Maureen Farrell"
-    coverImageSrc="/images/books/cult-of-we.jpg"
+    coverImageSrc="https://i.postimg.cc/15X48kcp/cult-of-we.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/the-cult-of-we-wework-adam-neumann-and-the-great-startup-delusion/9780593237113"
@@ -153,7 +153,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="The Buyout of America: How Private Equity Is Destroying Jobs and Killing the American Economy"
     author="Josh Kosman"
-    coverImageSrc="/images/books/buyoutofamerica.jpg"
+    coverImageSrc="https://i.postimg.cc/RF1JTwNK/buyoutofamerica.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/books/the-buyout-of-america-how-private-equity-is-destroying-jobs-and-killing-the-american-economy/9781591843696"
@@ -171,7 +171,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <BookRead
     title="The Righteous Mind: Why Good People Are Divided by Politics and Religion"
     author="Jonathan Haidt"
-    coverImageSrc="/images/books/righteousmind.jpg"
+    coverImageSrc="https://i.postimg.cc/sD2xf6w0/righteousmind.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/books/the-righteous-mind-why-good-people-are-divided-by-politics-and-religion-9798200560639/9780307455772"
