--- a/content/blog/2023-01-07-books-i-read-in-2022.mdx
+++ b/content/blog/2023-01-07-books-i-read-in-2022.mdx
@@ -14,7 +14,7 @@ These were my top books I read this year, in no particular order.
 <BookRead
     title="What If? 2"
     author="Randall Munroe"
-    coverImageSrc="/images/books/whatif2.jpg"
+    coverImageSrc="https://i.postimg.cc/KY9FWxyG/whatif2.jpg"
     width={233}
     height={300}
     link="https://bookshop.org/p/books/what-if-2-additional-serious-scientific-answers-to-absurd-hypothetical-questions-randall-munroe/18153615"
@@ -30,7 +30,7 @@ These were my top books I read this year, in no particular order.
 <BookRead
     title="Chokepoint Capitalism"
     author="Rebecca Giblin & Cory Doctorow"
-    coverImageSrc="/images/books/chokepoint_capitalism.jpg"
+    coverImageSrc="https://i.postimg.cc/VLZr4fLG/chokepoint-capitalism.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/books/chokepoint-capitalism-how-big-tech-and-big-content-captured-creative-labor-markets-and-how-we-ll-win-them-back/9780807007068"
@@ -46,7 +46,7 @@ These were my top books I read this year, in no particular order.
 <BookRead
     title="Unit Testing Principles, Practices, and Patterns"
     author="Vladimir Khorikov"
-    coverImageSrc="/images/books/unittesting.jpg"
+    coverImageSrc="https://i.postimg.cc/FRnqyKXS/unittesting.jpg"
     width={239}
     height={300}
     link="https://bookshop.org/p/books/what-if-2-additional-serious-scientific-answers-to-absurd-hypothetical-questions-randall-munroe/18153615"
@@ -62,7 +62,7 @@ These were my top books I read this year, in no particular order.
 <BookRead
     title="The End of Everything (Astrophysically Speaking)"
     author="Katie Mack"
-    coverImageSrc="/images/books/endofeverything.jpg"
+    coverImageSrc="https://i.postimg.cc/NF2SZZHy/endofeverything.jpg"
     width={195}
     height={300}
     link="https://bookshop.org/books/the-end-of-everything-astrophysically-speaking/9781982103552"
@@ -80,7 +80,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Four Lost Cities: A Secret History of the Urban Age"
     author="Annalee Newitz"
-    coverImageSrc="/images/books/fourlostcities.jpg"
+    coverImageSrc="https://i.postimg.cc/RCfzsnQg/fourlostcities.jpg"
     width={198}
     height={300}
     link="https://bookshop.org/p/books/four-lost-cities-a-secret-history-of-the-urban-age-annalee-newitz/16712885"
@@ -96,7 +96,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Weapons of Math Destruction: How Big Data Increases Inequality and Threatens Democracy"
     author="Cathy O'Neil"
-    coverImageSrc="/images/books/weapons_of_math_destruction.jpg"
+    coverImageSrc="https://i.postimg.cc/XvN4xXm1/weapons-of-math-destruction.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/p/books/weapons-of-math-destruction-how-big-data-increases-inequality-and-threatens-democracy-cathy-o-neil/11438502"
@@ -112,7 +112,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="The Data Detective: Ten Easy Rules to Make Sense of Statistics"
     author="Tim Harford"
-    coverImageSrc="/images/books/datadetective.jpg"
+    coverImageSrc="https://i.postimg.cc/T3nGK5hy/datadetective.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/the-data-detective-ten-easy-rules-to-make-sense-of-statistics/9780593084663"
@@ -128,7 +128,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Responsible Javascript"
     author="Jeremy Wagner"
-    coverImageSrc="/images/books/responsible_javascript.jpg"
+    coverImageSrc="https://i.postimg.cc/x86dyMTR/responsible-javascript.jpg"
     width={204}
     height={300}
     link="https://abookapart.com/products/responsible-javascript"
@@ -144,7 +144,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="The Night the Lights Went Out"
     author="Drew Magary"
-    coverImageSrc="/images/books/nightthelightswentout.jpg"
+    coverImageSrc="https://i.postimg.cc/brPdgmR1/nightthelightswentout.jpg"
     width={200}
     height={300}
     link="https://bookshop.org/books/the-night-the-lights-went-out-a-memoir-of-life-after-brain-damage/9780593232712"
@@ -160,7 +160,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Walkaway"
     author="Cory Doctorow"
-    coverImageSrc="/images/books/walkaway.jpg"
+    coverImageSrc="https://i.postimg.cc/kgmn6Tcm/walkaway.jpg"
     width={190}
     height={300}
     link="https://bookshop.org/books/walkaway/9780765392770"
@@ -176,7 +176,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Born a Crime"
     author="Trevor Noah"
-    coverImageSrc="/images/books/bornacrime.jpg"
+    coverImageSrc="https://i.postimg.cc/nLDDCyxd/bornacrime.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/books/born-a-crime-stories-from-a-south-african-childhood/9780399588198"
@@ -192,7 +192,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Project Hail Mary"
     author="Andy Weir"
-    coverImageSrc="/images/books/projecthailmary.jpg"
+    coverImageSrc="https://i.postimg.cc/HsZs8YFw/projecthailmary.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/project-hail-mary/9780593135204"
@@ -208,7 +208,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="The Passion Economy: The New Rules for Thriving in the Twenty-First Century"
     author="Adam Davidson"
-    coverImageSrc="/images/books/passioneconomy.jpg"
+    coverImageSrc="https://i.postimg.cc/XvyJ0RHw/passioneconomy.jpg"
     width={194}
     height={300}
     link="https://bookshop.org/books/the-passion-economy-the-new-rules-for-thriving-in-the-twenty-first-century/9780804172776"
@@ -224,7 +224,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Dark Pools: The Rise of the Machine Traders and the Rigging of the U.S. Stock Market"
     author="Scott Patterson"
-    coverImageSrc="/images/books/darkpools.jpg"
+    coverImageSrc="https://i.postimg.cc/Kv6xcDcS/darkpools.jpg"
     width={195}
     height={300}
     link="https://bookshop.org/books/dark-pools-the-rise-of-the-machine-traders-and-the-rigging-of-the-u-s-stock-market/9780307887184"
@@ -240,7 +240,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="It's Better to Be Feared: The New England Patriots Dynasty and the Pursuit of Greatness"
     author="Seth Wickersham"
-    coverImageSrc="/images/books/bettertobefeared.jpg"
+    coverImageSrc="https://i.postimg.cc/fWjY7Q9p/bettertobefeared.jpg"
     width={200}
     height={300}
     link="https://bookshop.org/books/it-s-better-to-be-feared-the-new-england-patriots-dynasty-and-the-pursuit-of-greatness/9781631498237"
@@ -256,7 +256,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="The Storyteller: Tales of Life and Music"
     author="Dave Grohl"
-    coverImageSrc="/images/books/storyteller.jpg"
+    coverImageSrc="https://i.postimg.cc/L55SS72t/storyteller.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/the-storyteller-tales-of-life-and-music/9780063076099"
@@ -272,7 +272,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Nudge: The Final Edition"
     author="Richard Thaler & Cass Sunstein"
-    coverImageSrc="/images/books/nudge.jpg"
+    coverImageSrc="https://i.postimg.cc/1XKXjDW2/nudge.jpg"
     width={196}
     height={300}
     link="https://bookshop.org/books/nudge-the-final-edition/9780143137009"
@@ -288,7 +288,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="The Apollo Murders"
     author="Chris Hadfield"
-    coverImageSrc="/images/books/apollomurders.jpg"
+    coverImageSrc="https://i.postimg.cc/mgr32phq/apollomurders.jpg"
     width={193}
     height={300}
     link="https://bookshop.org/books/the-apollo-murders-9781668601075/9780316264532"
@@ -304,7 +304,7 @@ While not my top books, these were all good and I enjoyed them.
 <BookRead
     title="Leviathan Falls"
     author="James S. A. Corey"
-    coverImageSrc="/images/books/leviathanfalls.jpg"
+    coverImageSrc="https://i.postimg.cc/3wwXCxw3/leviathanfalls.jpg"
     width={195}
     height={300}
     link="https://bookshop.org/books/leviathan-falls-9781705024997/9780316332910"
@@ -322,7 +322,7 @@ This doesn't mean that you won't like them, I just was only luke-warm on them.
 <BookRead
     title="Moonshot: Inside Pfizer's Nine-Month Race to Make the Impossible Possible"
     author="Albert Bourla"
-    coverImageSrc="/images/books/moonshot.jpg"
+    coverImageSrc="https://i.postimg.cc/QNcT7Tqp/moonshot.jpg"
     width={199}
     height={300}
     link="https://bookshop.org/books/moonshot-inside-pfizer-s-nine-month-race-to-make-the-impossible-possible-9798200746163/9780063210790"
