Added Related Post Functionality
# Work Done
A new property was added to blog posts to allow for manual addition of related blog posts. These will display on the blog entry page between the blog post content and the tags. A future issue can be added (maybe?) to back-fill the related posts on older posts.

# Related Issue
- Closes #529

--- a/content/blog/2023-11-21-the-media-and-protecting-democracy.mdx
+++ b/content/blog/2023-11-21-the-media-and-protecting-democracy.mdx
@@ -3,6 +3,10 @@ title: 'The Media and Protecting Democracy'
 date: '2023-11-21'
 tags: ['Politics', 'Media', 'News']
 commentIssueNumber: 171
+relatedPosts: [
+    { title: 'Staying Silent is Political Too', url: '/posts/2023/10/01/staying-silent-is-political-too'},
+    { title: "Thoughts on Trump's Failed Insurrection", url: '/posts/2021/01/07/thoughts-on-trumps-failed-insurrection'}
+]
 ---
 
 I was listening to a [Make Me Smart](https://www.marketplace.org/shows/make-me-smart/) podcast [episode](https://www.marketplace.org/shows/make-me-smart/polarization-partisanship-and-threats-to-democracy/) on my walk earlier this week and they were talking about some of the threats currently facing America, not from without, but from within. And something Kai Ryssdal said really struck home to me.
