Added a Series Component for Blog Post Series
# Work Done
Added a new component for MDX files to group blog post series together.

# Associated Issue
- Closes #531

--- a/content/blog/2023-03-19-digging-into-blazor-first-impressions.mdx
+++ b/content/blog/2023-03-19-digging-into-blazor-first-impressions.mdx
@@ -9,6 +9,18 @@ I've been hearing a lot of good things about Blazor for a while now and as a .NE
 
 This post will be the first in a multi-part series.
 
+<BlogSeries
+    series={{
+        title: 'Digging into Blazor',
+        posts: [
+            { title: 'First Impressions', url: '', sortOrder: 1, isCurrent: true },
+            { title: 'Integrating with Entity Framework', url: 'https://kpwags.com/posts/2023/04/04/digging-into-blazor-entity-framework', sortOrder: 2, isCurrent: false },
+            { title: 'Setting Up Custom Authentication', url: 'https://kpwags.com/posts/2023/07/31/blazor-custom-authentication', sortOrder: 3, isCurrent: false },
+            { title: 'Forms', url: 'https://kpwags.com/posts/2023/09/29/digging-into-blazor-forms', sortOrder: 4, isCurrent: false }
+        ]
+    }}
+/>
+
 To get started, I went through [Microsoft's tutorials](https://dotnet.microsoft.com/en-us/learn/aspnet/blazor-tutorial/intro). Playing around with it, my first thought was this felt kind of similar to my time years ago working with ASP.NET MVC sites. It was different, and it looked different in a good way, but the little bit of familiarity was definitely beneficial as it gave me a good jumping off point.
 
 After going through the tutorials, I realized I needed something to build. The best way I've found for myself to learn new languages and tools is to build something. Tutorials only go so far. The project I decided to build is an app to inventory my baseball and [Star Wars Customizable Card Game](https://en.wikipedia.org/wiki/Star_Wars_Customizable_Card_Game) cards. I recently found a bunch of cards from when I was a kid, so I figured it'd be a fun way to learn a new framework.
