--- a/content/blog/2023-04-04-digging-into-blazor-entity-framework.mdx
+++ b/content/blog/2023-04-04-digging-into-blazor-entity-framework.mdx
@@ -9,6 +9,18 @@ Now that I was getting my feet wet, it was time for me to start laying out the f
 
 This is the second post in a multi-part series. If you haven't read part one, you can [read about my first impressions](https://kpwags.com/posts/2023/03/19/digging-into-blazor-first-impressions).
 
+<BlogSeries
+    series={{
+        title: 'Digging into Blazor',
+        posts: [
+            { title: 'First Impressions', url: 'https://kpwags.com/posts/2023/03/19/digging-into-blazor-first-impressions', sortOrder: 1, isCurrent: false },
+            { title: 'Integrating with Entity Framework', url: 'https://kpwags.com/posts/2023/04/04/digging-into-blazor-entity-framework', sortOrder: 2, isCurrent: true },
+            { title: 'Setting Up Custom Authentication', url: 'https://kpwags.com/posts/2023/07/31/blazor-custom-authentication', sortOrder: 3, isCurrent: false },
+            { title: 'Forms', url: 'https://kpwags.com/posts/2023/09/29/digging-into-blazor-forms', sortOrder: 4, isCurrent: false }
+        ]
+    }}
+/>
+
 I had already decided to use Entity Framework to interact with my SQL server. I have used Entity Framework plenty in the past so I was familiar with the basics. If you haven't used Entity Framework, I would highly recommend reading about it and going through some tutorials. Microsoft provides some [great documentation](https://learn.microsoft.com/en-us/ef/core/).
 
 The first thing I did was look into how to use [Entity Framework with Blazor](https://learn.microsoft.com/en-us/aspnet/core/blazor/blazor-server-ef-core?view=aspnetcore-7.0).
