Added FitVids Post & Fixed Emoji

--- a/content/reading-logs/52.mdx
+++ b/content/reading-logs/52.mdx
@@ -9,7 +9,7 @@ I've been wanting to do more with web components, and a lot of this week is tied
 
 ## Link Blast
 
-### 🖥 .NET
+### 🖥️ .NET
 
 [C# Interceptors](https://pmichaels.net/c-sharp-interceptors/) - *Paul Michaels*
 
@@ -37,7 +37,7 @@ I've been wanting to do more with web components, and a lot of this week is tied
 
 ---
 
-### 🛜 The Internet
+### 📡 The Internet
 
 [Congrats To Elon Musk: I Didn’t Think You Had It In You To File A Lawsuit This Stupid. But, You Crazy Bastard, You Did It!](https://www.techdirt.com/2023/11/21/congrats-to-elon-musk-i-didnt-think-you-had-it-in-you-to-file-a-lawsuit-this-stupid-but-you-crazy-bastard-you-did-it/) - *Mike Masnick*
 
