--- a/content/reading-logs/51.mdx
+++ b/content/reading-logs/51.mdx
@@ -23,13 +23,13 @@ This week the latest version of .NET was released as weell as SpaceX taking thei
 
 ---
 
-### 🛜 The Internet
+### 📡 The Internet
 
 [But What Do We Do If Google Is Legitimately Just A Better Search Engine?](https://www.techdirt.com/2023/11/14/but-what-do-we-do-if-google-is-legitimately-just-a-better-search-engine/) - *Mike Masnick*
 
 ---
 
-### 📡 Technology
+### 🔌 Technology
 
 [The FCC says new rules will curb SIM swapping. I’m pessimistic](https://arstechnica.com/security/2023/11/the-fcc-says-new-rules-will-curb-sim-swapping-im-pessimistic/) - *Dan Goodin*
 
